fix overflow on homepage

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -264,6 +264,8 @@ canvas {
   justify-content: center;
   display: flex;
   padding-bottom: 15px;
+  overflow-x: scroll;
+  width: 200vh;
 }
 
 .twitch-thumbnail, .youtube-thumbnail {
